--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@mui/x-date-pickers": "^6.19.4",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "dayjs": "^1.11.10",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
@@ -24,5 +29,9 @@
     "typescript": "^5.3.3",
     "vite": "^4.5.1",
     "vite-plugin-svgr": "^3.3.0"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
