Correctly creates docker image

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "vite --port 8080"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
